# Max3CUT_Ising

./: README.md  pyproject.toml  setup.py
graphs/: g05_25.0
max3cut_ising/: __init__.py  higher_order_formulation.py  ising_formulation.py  max3cut_utils.py  performance_metrics.py
solutions/: optimal_solutions.csv
tests/: basic_usage.py
